Loader for blast results table, fix button align

--- a/src/tools/blast/components/styles/BlastForm.scss
+++ b/src/tools/blast/components/styles/BlastForm.scss
@@ -22,8 +22,7 @@
 
   &__buttons {
     pointer-events: initial;
-    margin-left: auto;
-    order: 2;
+    justify-content: flex-end;
   }
 }
 
